--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
 
   <main>
     <span id="aboutme">About Me</span>
-    <img id="img-pic" src="C:/Users/iamob/Desktop/CAcademy-projects/Portfolio-Website/profesional-pic.jpg" alt="Professional Picture">
-    <p>Hello, my name is Ikenna Amobi. <br>
+    <img id="img-pic" src="C:\Users\iamob\Desktop\CAcademy-projects\Portfolio-Website\profsuit-pic.jpg" alt="Professional Picture">
+    <span>    </span>
+    <p id="p-aboutme">Hello, my name is Ikenna Amobi. <br>
        I am a committed full-stack software engineer holding a Master's degree in Engineering Management (MeM).
        <br>My academic background includes a Bachelor's degree in Mathematics and an Associate degree in Science,<br>
        providing me with a strong mathematical and science foundation.
@@ -71,7 +72,7 @@
         });
 
         // Change the background and text color of the clicked item
-        navItem.style.backgroundColor = 'blue';
+        navItem.style.backgroundColor = 'white';
         navItem.style.color = 'white';
     });
 });
