--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio - Ikenna Amobi</title>
-    <link rel="stylesheet" type="text/css" href="C:/Users/iamob/Desktop/CAcademy-projects/Portfolio-Website/aboutMe.css">
+    <link rel="stylesheet" type="text/css" href="about-Me.css">
 </head>
 <body>
   <header id="header">
@@ -25,7 +25,7 @@
 
   <main>
     <span id="aboutme">About Me</span>
-    <img id="img-pic" src="C:\Users\iamob\Desktop\CAcademy-projects\Portfolio-Website\profsuit-pic.jpg" alt="Professional Picture">
+    <img id="img-pic" src="profsuit-pic.jpg" alt="Professional Picture">
     <span>    </span>
     <p id="p-aboutme">Hello, my name is Ikenna Amobi. <br>
        I am a committed full-stack software engineer holding a Master's degree in Engineering Management (MeM).
